Refactor HTML structure and update titles

--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Super-T — Pannello</title>
+  <title>Super‑T — Pannello</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <header class="hero">
-    <img src="assets/logo.png" alt="Super-T logo" class="logo">
-    <h1>Super-T — Manutenzione Bancaria</h1>
+    <div class="logo-wrap">
+      <img src="assets/logo.png" alt="Super-T logo" class="logo" id="site-logo">
+    </div>
+
+    <h1 class="title-fullwidth">
+      Ｓｕｐｅｒ-Ｔ<br>
+      Ｍａｎｕｔｅｎｚｉｏｎｅ Ｂａｎｃａｒｉａ
+    </h1>
+
     <p class="subtitle">Scegli una opzione</p>
   </header>
 
   <main class="menu">
-    <a class="card" href="magazzino.html">Materiali in magazzino</a>
-    <a class="card" href="utilizzati.html">Materiali utilizzati</a>
-    <a class="card" href="filiali.html">Informazioni filiali</a>
+    <a class="btn-card" href="magazzino.html" id="btn-magazzino">Materiali Magazzino</a>
+    <a class="btn-card" href="utilizzati.html" id="btn-utilizzati">Materiali Utilizzati</a>
+    <a class="btn-card" href="filiali.html" id="btn-filiali">Informazioni Filiali</a>
   </main>
 
   <footer class="footer">
