Refactor HTML structure and add footer details

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
 
     <h1 class="title-super">Ｓｕｐｅｒ-Ｔ</h1>
 
-    <h2 class="title-subwhite">
-      Ｍａｎｕｔｅｎｚｉｏｎｅ<br>
-      Ｂａｎｃａｒｉａ
-    </h2>
+    <div class="title-block">
+      <h2 class="title-subwhite">
+        Ｍａｎｕｔｅｎｚｉｏｎｅ<br>
+        Ｂａｎｃａｒｉａ
+      </h2>
+
+      <div class="title-extra">
+        <div class="ufficiale">ufficiale</div>
+        <div class="saima">SAIMA</div>
+      </div>
+    </div>
 
     <p class="subtitle">Scegli una opzione</p>
   </header>
@@ -37,7 +44,11 @@
   </main>
 
   <footer class="footer">
-    <small>Pagina pubblica — modifiche ai dati riservate all'amministratore.</small>
+    <small>
+      Pagina pubblica — modifiche ai dati riservate all'amministratore.<br>
+      Sito ideato, compilato e gestito da Tartaglia Samuele<br>
+      2026
+    </small>
   </footer>
 
   <script src="assets/js/app.js"></script>
