--- a/filiali.html
+++ b/filiali.html
@@ -7,16 +7,22 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <header class="small-header">
-    <a href="index.html" class="back">← Torna</a>
-    <img src="assets/logo.png" alt="Logo" class="logo-small">
-    <h2>Interventi Giornalieri</h2>
+  <!-- Header centrato, logo e titolo in riquadro -->
+  <header class="subpage-hero">
+    <div class="logo-wrap">
+      <img src="assets/logo.png" alt="Super-T logo" class="logo" id="site-logo">
+    </div>
+
+    <div class="title-box">
+      <h1 class="subpage-title">Interventi Giornalieri</h1>
+    </div>
   </header>
 
   <main class="container">
-    <div class="top-row" style="display:flex; justify-content:space-between; align-items:center; gap:12px; margin-bottom:14px;">
-      <button id="adminBtn" class="btn-card" style="padding:8px 12px; min-width:auto; font-weight:600;">Modifica (solo admin)</button>
-      <a href="index.html" class="btn-card" style="padding:8px 12px; min-width:auto; font-weight:600;">Torna al Menù principale</a>
+    <!-- Pulsanti centrati sotto il logo -->
+    <div class="center-buttons" style="margin-top:18px; margin-bottom:18px;">
+      <button id="adminBtn" class="btn-card" style="padding:10px 18px; min-width:200px; font-weight:700;">Modifica (solo admin)</button>
+      <a href="index.html" class="btn-card" style="padding:10px 18px; min-width:200px; font-weight:700; margin-left:12px;">Torna al Menù principale</a>
     </div>
 
     <div id="daysContainer">
@@ -24,10 +30,6 @@
     </div>
 
     <div id="empty" class="empty" style="display:none;">Nessun intervento registrato.</div>
-
-    <div style="margin-top:18px; color:var(--muted); font-size:13px;">
-      Nota: le modifiche permanenti si ottengono sostituendo il file <code>data/filiali.json</code> nella repository con quello scaricato dall'amministratore.
-    </div>
   </main>
 
   <script src="assets/js/filiali.js"></script>
