--- a/filiali.html
+++ b/filiali.html
@@ -20,9 +20,9 @@
 
   <main class="container">
     <!-- Pulsanti centrati sotto il logo -->
-    <div class="center-buttons" style="margin-top:18px; margin-bottom:18px;">
-      <button id="adminBtn" class="btn-card" style="padding:10px 18px; min-width:200px; font-weight:700;">Modifica (solo admin)</button>
-      <a href="index.html" class="btn-card" style="padding:10px 18px; min-width:200px; font-weight:700; margin-left:12px;">Torna al Menù principale</a>
+    <div class="center-buttons" id="centerButtons" style="margin-top:18px; margin-bottom:18px;">
+      <button id="adminBtn" type="button" class="btn-card btn-center" aria-label="Modifica (solo admin)">Modifica (solo admin)</button>
+      <a href="index.html" class="btn-card btn-center" style="margin-left:12px;" aria-label="Torna al Menù principale">Torna al Menù principale</a>
     </div>
 
     <div id="daysContainer">
